--- a/conf/application.conf
+++ b/conf/application.conf
@@ -215,3 +215,8 @@ mail.smtp=mock
 %test.jpa.ddl=create
 %test.mail.smtp=mock
 
+# Blog engine configuration
+# ~~~~~
+blog.title=Home
+blog.baseline=snadar5@uwo.ca
+
