everything except hook

--- a/conf/initial-data.yml
+++ b/conf/initial-data.yml
@@ -1,7 +1,16 @@
-# you describe your data using the YAML notation here
-# and then load them using Fixtures.load("data.yml")
+User(bob):
+    email:    bob@gmail.com
+    password:       secret
+    fullname:       Bob
 
-# User(bob):
-#   email: bob@gmail.com
-#   password: secret
-#   fullname: Bob
+User(jeff):
+    email:          jeff@gmail.com
+    password:       secret
+    fullname:       Jeff    
+    
+
+
+Contact(firstContactBob):
+    owner: bob
+    birthday: 2009-06-14
+    name: fred
