--- a/conf/application.conf
+++ b/conf/application.conf
@@ -63,7 +63,7 @@ date.format=yyyy-MM-dd
 # jpda.port=8000
 #
 # Java source level => 1.5, 1.6 or 1.7 (experimental)
-# java.source=1.5
+ java.source=1.6
 
 # Log level
 # ~~~~~
@@ -218,5 +218,5 @@ mail.smtp=mock
 # Blog engine configuration
 # ~~~~~
 blog.title=Home
-blog.baseline=snadar5@uwo.ca
+blog.baseline=Default credentials: bob@gmail.com / secret
 
