--- a/conf/application.conf
+++ b/conf/application.conf
@@ -218,5 +218,4 @@ mail.smtp=mock
 # Blog engine configuration
 # ~~~~~
 blog.title=Home
-blog.baseline=Default credentials: bob@gmail.com / secret
-
+blog.baseline= Make sure to check the readme!
